# dark-mode-daemon

./: Cargo.toml  Package.swift  README.md  dist-workspace.toml  main.swift
.github/workflows/: integration-tests.yaml  release.yml
crates/dark-mode-daemon/: Cargo.toml
crates/dark-mode-daemon-linux/: Cargo.toml
crates/dark-mode-daemon-linux/src/: main.rs
crates/dark-mode-daemon-linux/src/gsettings/: freedesktop.rs  gnome.rs  mod.rs
crates/dark-mode-daemon-macos/: Cargo.toml
crates/dark-mode-daemon-macos/src/: main.rs
crates/dark-mode-daemon/src/: cli.rs  discovery.rs  execution.rs  lib.rs  platform_specifics.rs
docs/: how-it-works.md  recipes.md
src/: cli.rs  config.rs  discovery.rs  execution.rs  lib.rs  main.rs  mode.rs  platform.rs  platform_specifics.rs
src/cli/: commands.rs  environment.rs  interface.rs
src/cli/commands/: current.rs  daemon.rs  list.rs  run.rs
src/platform/: dark_light.rs  linux.rs  macos.rs  mod.rs
src/platform/linux/: autostart.rs  mod.rs
src/platform/linux/gsettings/: freedesktop.rs  gnome.rs  mod.rs
src/platform/macos/: autostart.rs
