[package]
name = "dark-mode-daemon"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/NiclasvanEyk/dark-mode-daemon"
homepage = "https://github.com/NiclasvanEyk/dark-mode-daemon"
description = "😈 Run scripts when the system color scheme changes between light and dark."

[dependencies]
xdg = "2.5.2"
clap = { version = "4.5.32", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
anyhow = "1.0.97"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.0"
objc2 = { version = "0.6.0" }
objc2-app-kit = { version = "0.3.0", features = [
  "NSApplication",
  "NSResponder",
] }
objc2-foundation = { version = "0.3.0", features = [
  "NSNotification",
  "NSDistributedNotificationCenter",
  "NSOperation",
  "NSString",
  "NSThread",
  "NSUserDefaults",
  "block2",
] }

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.12.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
